Fix image overflowing card in IE10

--- a/shared/components/card/image/_image.scss
+++ b/shared/components/card/image/_image.scss
@@ -76,6 +76,11 @@
 	}
 }
 
+.card__picture {
+	display: block;
+	max-width: 100%;
+}
+
 .card__image {
 	display: block;
 	width: 100%;
